--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="about_me">About Me</string>
     <string name="contact">Contact</string>
     <string name="skills">Skills</string>
+    <string name="default_web_client_id">VOTRE_ID_CLIENT_ISSU_DE_GOOGLE-SERVICES.JSON</string>
     <string name="ratings">Star Ratings</string>
     <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
 </resources>
